force-app/main/default/objects/PBS_AAAP_PV_Calculation_Setting__mdt/PBS_AAAP_PV_Calculation_Setting__mdt.object-meta.xml
<CustomObject>
    <description>To identify the implementation class for LOP PV Calculation.</description>
    <label>PV  Calculation Setting</label>
    <pluralLabel>PV  Calculation Settings</pluralLabel>
</CustomObject>