force-app/main/default/objects/PBS_AAAP_PV_Calculation_Setting__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <inlineHelpText>Provide API name for the implementation class.</inlineHelpText>
    <label>Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>