force-app/main/default/objects/PBS_AAAP_PV_Calculation_Setting__mdt/fields/RLP_FY_Year__c.field-meta.xml
<CustomField>
    <fullName>RLP_FY_Year__c</fullName>
    <label>RLP FY/Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>