force-app/main/default/objects/PBS_AAAP_PV_Calculation_Setting__mdt/fields/Short_Term_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Class_Name__c</fullName>
    <label>Short Term Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>