force-app/main/default/objects/PBS_AAAP_PV_Calculation_Setting__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>RLP_FY_Year__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Class_Name__c</columns>
    <columns>Short_Term_Class_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>